2.4 Add support for 'plausible values', ie, imputations of a small number
    of variables stored as columns in the same dataset as everything else

2.3 move vignettes for CRAN

2.2 as for 2.1

2.1 no actual changes, just changes in CRAN requirements

2.0 database-based imputation objects.

    option in MIcombine() to add complete-data degrees of freedom

1.0  First public release
