@@ -5,6 +5,6 @@ Author: Thomas Lumley
 Description: Tools to perform analyses and combine results from
         multiple-imputation datasets.
 Maintainer: Thomas Lumley <t.lumley@auckland.ac.nz>
-Suggests: RODBC, DBI, foreign
+Suggests: RODBC, foreign
+Imports: DBI, methods, stats
 License: GPL-2
-Repository: CRAN
