@@ -1,6 +1,9 @@
 2.4 Add support for 'plausible values', ie, imputations of a small number
     of variables stored as columns in the same dataset as everything else
 
+    RODBC support is deprecated. Please use the obdc package, which uses
+    the DBI interface.  **Tell me if this is problem**
+
 2.3 move vignettes for CRAN
 
 2.2 as for 2.1
